--- a/model-industrialization-final.ipynb.ipynb
+++ b/model-industrialization-final.ipynb.ipynb
@@ -58,7 +58,7 @@
     "import pandas as pd\n",
     "from house_prices.train import build_model\n",
     "\n",
-    "train_df = pd.read_csv('data/train.csv')  # ✅ Correct path for your current directory\n",
+    "train_df = pd.read_csv('data/train.csv')  
     "metrics = build_model(train_df)\n",
     "print(metrics)\n"
    ]
@@ -81,7 +81,7 @@
     "import pandas as pd\n",
     "from house_prices.train import build_model\n",
     "\n",
-    "train_df = pd.read_csv('data/train.csv')   # ✅ updated path\n",
+    "train_df = pd.read_csv('data/train.csv')  
     "metrics = build_model(train_df)\n",
     "print(metrics)\n"
    ]
@@ -149,7 +149,7 @@
     "import pandas as pd\n",
     "from house_prices.inference import make_predictions\n",
     "\n",
-    "test_df = pd.read_csv('data/test.csv')   # or data/main.csv if that's your file\n",
+    "test_df = pd.read_csv('data/test.csv')   
     "predictions = make_predictions(test_df)\n",
     "predictions\n"
    ]
