Final industrialization: cleaned structure, added package and refactored code

--- a/house-prices-modeling.ipynb
+++ b/house-prices-modeling.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "0eb3ac02-d68a-426d-8b73-651b613d6d6d",
    "metadata": {},
    "outputs": [
@@ -29,9 +29,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook working dir: C:\\Users\\hp\\data-science-env\n",
-      "Parent folder list: ['.anaconda', '.android', '.conda', '.condarc', '.continuum', '.cursor', '.gitconfig', '.ipython', '.jupyter', '.mamba', '.matplotlib', '.packettracer', '.VirtualBox', '.vscode', '3D Objects', 'anaconda3', 'AppData', 'Application Data', 'Cisco Packet Tracer 8.2.2', 'Contacts', 'Cookies', 'data-science-env', 'Documents', 'Downloads', 'Favorites', 'IdeaProjects', 'IntelGraphicsProfiles', 'Links', 'Local Settings', 'miniconda3', 'Music', 'My Documents', 'mysqld', 'NetHood', 'NTUSER.DAT', 'ntuser.dat.LOG1', 'ntuser.dat.LOG2', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TM.blf', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TMContainer00000000000000000001.regtrans-ms', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TMContainer00000000000000000002.regtrans-ms', 'ntuser.ini', 'OneDrive', 'PrintHood', 'Recent', 'Saved Games', 'Searches', 'SendTo', 'Start Menu', 'Templates', 'Tracing', 'venv', 'Videos', 'VirtualBox VMs']\n",
-      "Is ../data a dir: False\n",
+      "Notebook working dir: C:\\Users\\hp\\dsp-bilal-razaghouru\n",
+      "Parent folder list: ['.anaconda', '.android', '.aws', '.azure', '.conda', '.condarc', '.continuum', '.cursor', '.docker', '.env', '.gitconfig', '.ipynb_checkpoints', '.ipython', '.jupyter', '.lesshst', '.mamba', '.matplotlib', '.packettracer', '.python_history', '.streamlit', '.venv', '.VirtualBox', '.vscode', '3D Objects', 'airflow', 'airflow-docker', 'anaconda3', 'api', 'AppData', 'Application Data', 'bad_data', 'config', 'Contacts', 'Cookies', 'dags', 'data', 'db', 'dir', 'docker-compose.yaml', 'Documents', 'Downloads', 'DSP-BILAL-RAZAGHOURI-PROJECT', 'dsp-bilal-razaghouru', 'Favorites', 'IdeaProjects', 'IntelGraphicsProfiles', 'Links', 'Local Settings', 'logs', 'miniconda3', 'Music', 'My Documents', 'mysqld', 'NetHood', 'notebooks', 'NTUSER.DAT', 'ntuser.dat.LOG1', 'ntuser.dat.LOG2', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TM.blf', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TMContainer00000000000000000001.regtrans-ms', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TMContainer00000000000000000002.regtrans-ms', 'ntuser.ini', 'OneDrive', 'pip', 'plugins', 'PrintHood', 'project-root', 'raw-data', 'Recent', 'requirements-local-windows.txt', 'requirements.txt', 'responses', 'Saved Games', 'scripts', 'Searches', 'SendTo', 'start', 'Start Menu', 'Templates', 'Tracing', 'Untitled.ipynb', 'venv', 'Videos', 'VirtualBox VMs', 'webapp']\n",
+      "Is ../data a dir: True\n",
       "Does ../data/train.csv exist: False\n"
      ]
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "f5018818-f289-49a0-9141-b2b74e9c1490",
    "metadata": {},
    "outputs": [
@@ -54,9 +54,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook working dir: C:\\Users\\hp\\data-science-env\n",
-      "Parent folder list: ['.anaconda', '.android', '.conda', '.condarc', '.continuum', '.cursor', '.gitconfig', '.ipython', '.jupyter', '.mamba', '.matplotlib', '.packettracer', '.VirtualBox', '.vscode', '3D Objects', 'anaconda3', 'AppData', 'Application Data', 'Cisco Packet Tracer 8.2.2', 'Contacts', 'Cookies', 'data-science-env', 'Documents', 'Downloads', 'Favorites', 'IdeaProjects', 'IntelGraphicsProfiles', 'Links', 'Local Settings', 'miniconda3', 'Music', 'My Documents', 'mysqld', 'NetHood', 'NTUSER.DAT', 'ntuser.dat.LOG1', 'ntuser.dat.LOG2', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TM.blf', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TMContainer00000000000000000001.regtrans-ms', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TMContainer00000000000000000002.regtrans-ms', 'ntuser.ini', 'OneDrive', 'PrintHood', 'Recent', 'Saved Games', 'Searches', 'SendTo', 'Start Menu', 'Templates', 'Tracing', 'venv', 'Videos', 'VirtualBox VMs']\n",
-      "Is ../data a dir: False\n",
+      "Notebook working dir: C:\\Users\\hp\\dsp-bilal-razaghouru\n",
+      "Parent folder list: ['.anaconda', '.android', '.aws', '.azure', '.conda', '.condarc', '.continuum', '.cursor', '.docker', '.env', '.gitconfig', '.ipynb_checkpoints', '.ipython', '.jupyter', '.lesshst', '.mamba', '.matplotlib', '.packettracer', '.python_history', '.streamlit', '.venv', '.VirtualBox', '.vscode', '3D Objects', 'airflow', 'airflow-docker', 'anaconda3', 'api', 'AppData', 'Application Data', 'bad_data', 'config', 'Contacts', 'Cookies', 'dags', 'data', 'db', 'dir', 'docker-compose.yaml', 'Documents', 'Downloads', 'DSP-BILAL-RAZAGHOURI-PROJECT', 'dsp-bilal-razaghouru', 'Favorites', 'IdeaProjects', 'IntelGraphicsProfiles', 'Links', 'Local Settings', 'logs', 'miniconda3', 'Music', 'My Documents', 'mysqld', 'NetHood', 'notebooks', 'NTUSER.DAT', 'ntuser.dat.LOG1', 'ntuser.dat.LOG2', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TM.blf', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TMContainer00000000000000000001.regtrans-ms', 'NTUSER.DAT{2ad838bc-efea-11ee-a54d-000d3a94eaa1}.TMContainer00000000000000000002.regtrans-ms', 'ntuser.ini', 'OneDrive', 'pip', 'plugins', 'PrintHood', 'project-root', 'raw-data', 'Recent', 'requirements-local-windows.txt', 'requirements.txt', 'responses', 'Saved Games', 'scripts', 'Searches', 'SendTo', 'start', 'Start Menu', 'Templates', 'Tracing', 'Untitled.ipynb', 'venv', 'Videos', 'VirtualBox VMs', 'webapp']\n",
+      "Is ../data a dir: True\n",
       "Does ../data/train.csv exist: False\n"
      ]
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "8e4579f5-e1fd-4d80-b3a4-47028fdf3104",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "2d80b536-5ff0-4a00-9ae4-3efc569b8c97",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,7 @@
        "[10 rows x 81 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "b96b7872-03fc-40ac-b712-8b4e4cd17b87",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "754d5f38-ae93-4b23-9b33-cd62eb9ee6a0",
    "metadata": {},
    "outputs": [],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "1383cca6-b68f-4b2d-b78d-a2ee62c9788e",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "c8b2c0f5-266a-40fa-a576-ff8f8a951074",
    "metadata": {},
    "outputs": [],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "b47c03a2-d069-42cb-bb50-cb9da2c10341",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
        "4  0.375148   1.299326"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "e912dcc2-1510-4f0d-9ccb-feb8cc4af221",
    "metadata": {},
    "outputs": [
@@ -933,7 +933,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "5de894bb-9c3d-4cc8-bb4e-bcc854bd5222",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1166,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
+   "id": "3a6a0f34-a338-4d22-bf17-50f4540c1798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "X_train_processed.to_parquet('data/processed_df.parquet', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "70fe776e-1fc5-4941-b0a6-26bbae5c5276",
    "metadata": {},
    "outputs": [],
@@ -1190,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "d228e19e-4f08-4e89-8e9b-074f3d30d0c1",
    "metadata": {},
    "outputs": [
@@ -1912,7 +1923,7 @@
        "RandomForestRegressor(n_jobs=-1, random_state=42)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1927,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "8aab1a89-678b-4061-a286-7d209ee5cd39",
    "metadata": {},
    "outputs": [],
@@ -1941,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "2d99b36f-aa6e-4f62-8980-6a3c11511082",
    "metadata": {},
    "outputs": [
@@ -1967,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "e6f51fdf-666e-4457-a5c1-6d2eeaa2d6ef",
    "metadata": {},
    "outputs": [
@@ -1977,7 +1988,7 @@
        "np.float64(0.1957)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "fae0a835-3847-4428-b1b6-053e84cc26e4",
    "metadata": {},
    "outputs": [
@@ -2004,7 +2015,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['house-prices-modeling-checkpoint.ipynb']\n"
+      "['.ipynb_checkpoints', 'house-prices-modeling.ipynb', 'model-industrialization-final.ipynb']\n"
      ]
     }
    ],
